--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,8 +4,8 @@
 
 @font-face {
   font-family: 'AnotherDanger';
-  src: url('assets/Mona-Sans.woff2') format('woff2 supports variations'),
-    url('assets/Mona-Sans.woff2') format('woff2-variations');
+  src: url('/assets/Mona-Sans.woff2') format('woff2 supports variations'),
+    url('/assets/Mona-Sans.woff2') format('woff2-variations');
   font-weight: 100 1000;
 }
 
